Fix to make sidebar links readable in hover state

--- a/app/styles/overrides/_overrides.less
+++ b/app/styles/overrides/_overrides.less
@@ -1064,3 +1064,6 @@ a {
 
 }
 
+.nav-sidebar>li>a:hover {
+  color:#111;
+}
